# KodJIT

./: .clang-format  CMakeLists.txt  Readme.md
include/Core/: Analyses.hpp  Analysis.hpp  Compiler.h  LoopInfo.hpp  Passes.hpp
include/DataStructures/: DominatorTree.hpp  DominatorsTree.hpp  Graph.hpp  List.hpp  Tree.hpp
include/IR/: BasicBlock.hpp  IRBuilder.hpp  IRCommon.h  IRInstEnum.def  IROperand.hpp  IRPrinter.hpp  IRTypes.hpp  Instruction.hpp  ProgramGraph.hpp
include/ISA/: constants.hpp
include/List/: List.hpp
lib/: CMakeLists.txt
lib/Core/: Analyses.cpp  Analysis.cpp  CMakeLists.txt  Compiler.cpp  Passes.cpp
lib/IR/: BasicBlock.cpp  CMakeLists.txt  IRBuilder.cpp  IRPrinter.cpp  Instruction.cpp  ProgramGraph.cpp
lib/List/: CMakeLists.txt  List.cpp
test/: CMakeLists.txt  List_test.cpp
test/Core/: CMakeLists.txt  Core_test.cpp
test/DataStructures/: CMakeLists.txt  Graph_test.cpp  List_test.cpp
test/IR/: CMakeLists.txt  IRBuilder_test.cpp  LoopAnalyzer_test.cpp
utils/: pic.sh
